# vara-contract-generator

./: Cargo.toml  README.md
src/: cli.rs  main.rs
src/templates/: cargo.toml.hbs
src/templates/nft/: cargo.toml.hbs
src/templates/pingpong/src/: lib.rs.hbs
src/templates/state/: lib.rs.hbs
