[package]
name = "vara"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.4"
crossterm = "0.27.0"
dialoguer = "0.11.0"
handlebars = "5.1.2"
ollama-rs = "0.1.9"
ratatui = "0.26.3"
serde_json = "1.0.117"
structopt = "0.3.26"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.15"
